// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Portfolio getBalanceHistory should return history of 30 items with month range 1`] = `
Array [
  Object {
    "date": 2020-04-04T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-05T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-06T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-07T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-08T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-09T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-10T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-11T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-12T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-13T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-14T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-15T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-16T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-17T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-18T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-19T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-20T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-21T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-22T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-23T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-24T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-25T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-27T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-28T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-29T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-30T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-05-01T03:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2020-05-02T03:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-02T12:04:06.099Z,
    "value": 1123402240807953300,
  },
]
`;

exports[`Portfolio getBalanceHistory should return history of 52 items with all time range 1`] = `
Array [
  Object {
    "date": 2019-05-12T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-05-19T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-05-26T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-06-02T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-06-09T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-06-16T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-06-23T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-06-30T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-07-07T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-07-14T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-07-21T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-07-28T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-08-04T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-08-11T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-08-18T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-08-25T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-09-01T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-09-08T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-09-15T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-09-22T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-09-29T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-10-06T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-10-13T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-10-20T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-10-27T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-11-03T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-11-10T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-11-17T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-11-24T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-12-01T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-12-08T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-12-15T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-12-22T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-12-29T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-01-05T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-01-12T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-01-19T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-01-26T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-02-02T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-02-09T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-02-16T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-02-23T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-03-01T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-03-08T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-03-15T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-03-22T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-03-29T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-05T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-12T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-19T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-05-02T12:04:06.099Z,
    "value": 1123402240807953300,
  },
]
`;

exports[`Portfolio getBalanceHistory should return history of 52 items with year range 1`] = `
Array [
  Object {
    "date": 2019-05-12T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-05-19T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-05-26T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-06-02T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-06-09T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-06-16T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-06-23T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-06-30T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-07-07T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-07-14T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-07-21T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-07-28T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-08-04T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-08-11T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-08-18T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-08-25T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-09-01T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-09-08T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-09-15T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-09-22T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-09-29T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-10-06T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-10-13T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-10-20T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-10-27T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-11-03T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-11-10T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-11-17T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-11-24T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-12-01T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-12-08T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-12-15T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-12-22T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2019-12-29T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-01-05T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-01-12T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-01-19T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-01-26T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-02-02T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-02-09T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-02-16T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-02-23T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-03-01T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-03-08T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-03-15T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-03-22T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-03-29T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-05T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-12T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-19T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-05-02T12:04:06.099Z,
    "value": 1123402240807953300,
  },
]
`;

exports[`Portfolio getBalanceHistory should return history of 168 items with day range 1`] = `
Array [
  Object {
    "date": 2020-05-01T13:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2020-05-01T14:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2020-05-01T15:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2020-05-01T16:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2020-05-01T17:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2020-05-01T18:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2020-05-01T19:59:59.999Z,
    "value": 1150053477811091800,
  },
  Object {
    "date": 2020-05-01T20:59:59.999Z,
    "value": 1150053477811091800,
  },
  Object {
    "date": 2020-05-01T21:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-01T22:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-01T23:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-02T00:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-02T01:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-02T02:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-02T03:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-02T04:59:59.999Z,
    "value": 703838128802623100,
  },
  Object {
    "date": 2020-05-02T05:59:59.999Z,
    "value": 703838128802623100,
  },
  Object {
    "date": 2020-05-02T06:59:59.999Z,
    "value": 772184524748829700,
  },
  Object {
    "date": 2020-05-02T07:59:59.999Z,
    "value": 772184524748829700,
  },
  Object {
    "date": 2020-05-02T08:59:59.999Z,
    "value": 772184524748829700,
  },
  Object {
    "date": 2020-05-02T09:59:59.999Z,
    "value": 772184524748829700,
  },
  Object {
    "date": 2020-05-02T10:59:59.999Z,
    "value": 1123402240807953300,
  },
  Object {
    "date": 2020-05-02T11:59:59.999Z,
    "value": 1123402240807953300,
  },
  Object {
    "date": 2020-05-02T12:04:06.099Z,
    "value": 1123402240807953300,
  },
]
`;

exports[`Portfolio getBalanceHistory should return history of 168(7 * 24) items with week range 1`] = `
Array [
  Object {
    "date": 2020-04-30T09:59:59.999Z,
    "value": 635035856433994400,
  },
  Object {
    "date": 2020-04-30T10:59:59.999Z,
    "value": 635035856433994400,
  },
  Object {
    "date": 2020-04-30T11:59:59.999Z,
    "value": 635035856433994400,
  },
  Object {
    "date": 2020-04-30T12:59:59.999Z,
    "value": 635035856433994400,
  },
  Object {
    "date": 2020-04-30T13:59:59.999Z,
    "value": 635035856433994400,
  },
  Object {
    "date": 2020-04-30T14:59:59.999Z,
    "value": 635035856433994400,
  },
  Object {
    "date": 2020-04-30T15:59:59.999Z,
    "value": 635035856433994400,
  },
  Object {
    "date": 2020-04-30T16:59:59.999Z,
    "value": 635035856433994400,
  },
  Object {
    "date": 2020-04-30T17:59:59.999Z,
    "value": 635035856433994400,
  },
  Object {
    "date": 2020-04-30T18:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2020-04-30T19:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2020-04-30T20:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2020-04-30T21:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2020-04-30T22:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2020-04-30T23:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2020-05-01T00:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2020-05-01T01:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2020-05-01T02:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2020-05-01T03:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2020-05-01T04:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2020-05-01T05:59:59.999Z,
    "value": 1288657443935967000,
  },
  Object {
    "date": 2020-05-01T06:59:59.999Z,
    "value": 1381428295898865700,
  },
  Object {
    "date": 2020-05-01T07:59:59.999Z,
    "value": 1381428295898865700,
  },
  Object {
    "date": 2020-05-01T08:59:59.999Z,
    "value": 1381428295898865700,
  },
  Object {
    "date": 2020-05-01T09:59:59.999Z,
    "value": 1381428295898865700,
  },
  Object {
    "date": 2020-05-01T10:59:59.999Z,
    "value": 1381428295898865700,
  },
  Object {
    "date": 2020-05-01T11:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2020-05-01T12:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2020-05-01T13:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2020-05-01T14:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2020-05-01T15:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2020-05-01T16:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2020-05-01T17:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2020-05-01T18:59:59.999Z,
    "value": 1033892658636228100,
  },
  Object {
    "date": 2020-05-01T19:59:59.999Z,
    "value": 1150053477811091800,
  },
  Object {
    "date": 2020-05-01T20:59:59.999Z,
    "value": 1150053477811091800,
  },
  Object {
    "date": 2020-05-01T21:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-01T22:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-01T23:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-02T00:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-02T01:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-02T02:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-02T03:59:59.999Z,
    "value": 45990917538968680,
  },
  Object {
    "date": 2020-05-02T04:59:59.999Z,
    "value": 703838128802623100,
  },
  Object {
    "date": 2020-05-02T05:59:59.999Z,
    "value": 703838128802623100,
  },
  Object {
    "date": 2020-05-02T06:59:59.999Z,
    "value": 772184524748829700,
  },
  Object {
    "date": 2020-05-02T07:59:59.999Z,
    "value": 772184524748829700,
  },
  Object {
    "date": 2020-05-02T08:59:59.999Z,
    "value": 772184524748829700,
  },
  Object {
    "date": 2020-05-02T09:59:59.999Z,
    "value": 772184524748829700,
  },
  Object {
    "date": 2020-05-02T10:59:59.999Z,
    "value": 1123402240807953300,
  },
  Object {
    "date": 2020-05-02T11:59:59.999Z,
    "value": 1123402240807953300,
  },
  Object {
    "date": 2020-05-02T12:04:06.099Z,
    "value": 1123402240807953300,
  },
]
`;

exports[`Portfolio getBalanceHistoryWithCountervalue should return same value as history 1`] = `
Object {
  "countervalueAvailable": true,
  "countervalueChange": Object {
    "percentage": -0.6450111434861394,
    "value": -98302.9298993593,
  },
  "countervalueReceiveSum": 0,
  "countervalueSendSum": 0,
  "cryptoChange": Object {
    "percentage": null,
    "value": -11160432,
  },
  "history": Array [
    Object {
      "countervalue": 152405.01019572187,
      "date": 2020-05-01T13:59:59.999Z,
      "value": 17236747,
    },
    Object {
      "countervalue": 151209.8142889088,
      "date": 2020-05-01T14:59:59.999Z,
      "value": 17236747,
    },
    Object {
      "countervalue": 151846.21109282936,
      "date": 2020-05-01T15:59:59.999Z,
      "value": 17246054,
    },
    Object {
      "countervalue": 150318.77547821897,
      "date": 2020-05-01T16:59:59.999Z,
      "value": 17246054,
    },
    Object {
      "countervalue": 87748.16154230622,
      "date": 2020-05-01T17:59:59.999Z,
      "value": 10045025,
    },
    Object {
      "countervalue": 87982.33167296604,
      "date": 2020-05-01T18:59:59.999Z,
      "value": 10045025,
    },
    Object {
      "countervalue": 87763.5866399208,
      "date": 2020-05-01T19:59:59.999Z,
      "value": 10045025,
    },
    Object {
      "countervalue": 87545.64944410611,
      "date": 2020-05-01T20:59:59.999Z,
      "value": 10045025,
    },
    Object {
      "countervalue": 88318.76840136599,
      "date": 2020-05-01T21:59:59.999Z,
      "value": 10045025,
    },
    Object {
      "countervalue": 53713.9230964081,
      "date": 2020-05-01T22:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 53835.27448811806,
      "date": 2020-05-01T23:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 53531.184753326364,
      "date": 2020-05-02T00:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 53540.00439872327,
      "date": 2020-05-02T01:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 53504.964505835735,
      "date": 2020-05-02T02:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 53705.236263541236,
      "date": 2020-05-02T03:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 53652.68600940711,
      "date": 2020-05-02T04:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 53568.8713747536,
      "date": 2020-05-02T05:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 53722.6483415262,
      "date": 2020-05-02T06:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 53555.58930533219,
      "date": 2020-05-02T07:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 53460.06924455731,
      "date": 2020-05-02T08:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 53535.80710625345,
      "date": 2020-05-02T09:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 53698.19302922189,
      "date": 2020-05-02T10:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 53925.65231021187,
      "date": 2020-05-02T11:59:59.999Z,
      "value": 6076315,
    },
    Object {
      "countervalue": 54102.080296362576,
      "date": 2020-05-02T12:04:06.099Z,
      "value": 6076315,
    },
  ],
}
`;

exports[`Portfolio getPortfolio should work with one account and is identically to that account history 1`] = `
Array [
  Object {
    "date": 2020-04-25T13:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-25T14:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-25T15:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-25T16:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-25T17:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-25T18:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-25T19:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-25T20:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-25T21:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-25T22:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-25T23:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T00:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T01:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T02:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T04:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T05:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T06:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T07:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T08:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T09:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T10:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T11:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T12:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T13:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T14:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T15:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T16:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T17:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T18:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T19:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T20:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T21:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T22:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-26T23:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-27T00:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-27T01:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-27T02:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-27T03:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-27T04:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-27T05:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-27T06:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-27T07:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-27T08:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-27T09:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-27T10:59:59.999Z,
    "value": 0,
  },
  Object {
    "date": 2020-04-27T11:59:59.999Z,
    "value": 20532.979830688688,
  },
  Object {
    "date": 2020-04-27T12:59:59.999Z,
    "value": 20503.176520289097,
  },
  Object {
    "date": 2020-04-27T13:59:59.999Z,
    "value": 20418.97786743909,
  },
  Object {
    "date": 2020-04-27T14:59:59.999Z,
    "value": 20407.286730661723,
  },
  Object {
    "date": 2020-04-27T15:59:59.999Z,
    "value": 40569.65554537582,
  },
  Object {
    "date": 2020-04-27T16:59:59.999Z,
    "value": 40548.44041443044,
  },
  Object {
    "date": 2020-04-27T17:59:59.999Z,
    "value": 41758.65255362951,
  },
  Object {
    "date": 2020-04-27T18:59:59.999Z,
    "value": 41930.24512913343,
  },
  Object {
    "date": 2020-04-27T19:59:59.999Z,
    "value": 42015.71243561828,
  },
  Object {
    "date": 2020-04-27T20:59:59.999Z,
    "value": 41983.99785948341,
  },
  Object {
    "date": 2020-04-27T21:59:59.999Z,
    "value": 42163.88393873064,
  },
  Object {
    "date": 2020-04-27T22:59:59.999Z,
    "value": 42240.5416861275,
  },
  Object {
    "date": 2020-04-27T23:59:59.999Z,
    "value": 42342.89550807981,
  },
  Object {
    "date": 2020-04-28T00:59:59.999Z,
    "value": 42577.52972052866,
  },
  Object {
    "date": 2020-04-28T01:59:59.999Z,
    "value": 42378.761851424926,
  },
  Object {
    "date": 2020-04-28T02:59:59.999Z,
    "value": 42263.80211518488,
  },
  Object {
    "date": 2020-04-28T03:59:59.999Z,
    "value": 42327.03023246045,
  },
  Object {
    "date": 2020-04-28T04:59:59.999Z,
    "value": 42211.68417916573,
  },
  Object {
    "date": 2020-04-28T05:59:59.999Z,
    "value": 42245.6175065107,
  },
  Object {
    "date": 2020-04-28T06:59:59.999Z,
    "value": 42282.58244355733,
  },
  Object {
    "date": 2020-04-28T07:59:59.999Z,
    "value": 42339.85036739384,
  },
  Object {
    "date": 2020-04-28T08:59:59.999Z,
    "value": 42287.42795290752,
  },
  Object {
    "date": 2020-04-28T09:59:59.999Z,
    "value": 42462.77768000411,
  },
  Object {
    "date": 2020-04-28T10:59:59.999Z,
    "value": 42541.95120335883,
  },
  Object {
    "date": 2020-04-28T11:59:59.999Z,
    "value": 39543.418336902345,
  },
  Object {
    "date": 2020-04-28T12:59:59.999Z,
    "value": 39549.97273630247,
  },
  Object {
    "date": 2020-04-28T13:59:59.999Z,
    "value": 39569.460388371175,
  },
  Object {
    "date": 2020-04-28T14:59:59.999Z,
    "value": 39415.47223850669,
  },
  Object {
    "date": 2020-04-28T15:59:59.999Z,
    "value": 39341.98069441821,
  },
  Object {
    "date": 2020-04-28T16:59:59.999Z,
    "value": 39490.0384546551,
  },
  Object {
    "date": 2020-04-28T17:59:59.999Z,
    "value": 39493.446851083085,
  },
  Object {
    "date": 2020-04-28T18:59:59.999Z,
    "value": 39529.16387654944,
  },
  Object {
    "date": 2020-04-28T19:59:59.999Z,
    "value": 29501.38384442536,
  },
  Object {
    "date": 2020-04-28T20:59:59.999Z,
    "value": 38683.05081805588,
  },
  Object {
    "date": 2020-04-28T21:59:59.999Z,
    "value": 35476.49823882345,
  },
  Object {
    "date": 2020-04-28T22:59:59.999Z,
    "value": 38712.15180948799,
  },
  Object {
    "date": 2020-04-28T23:59:59.999Z,
    "value": 38796.24544387201,
  },
  Object {
    "date": 2020-04-29T00:59:59.999Z,
    "value": 38784.45862639423,
  },
  Object {
    "date": 2020-04-29T01:59:59.999Z,
    "value": 38758.66820162303,
  },
  Object {
    "date": 2020-04-29T02:59:59.999Z,
    "value": 60433.25811864453,
  },
  Object {
    "date": 2020-04-29T03:59:59.999Z,
    "value": 60679.396740514865,
  },
  Object {
    "date": 2020-04-29T04:59:59.999Z,
    "value": 60728.37093138286,
  },
  Object {
    "date": 2020-04-29T05:59:59.999Z,
    "value": 60979.95169427782,
  },
  Object {
    "date": 2020-04-29T06:59:59.999Z,
    "value": 61438.6192702331,
  },
  Object {
    "date": 2020-04-29T07:59:59.999Z,
    "value": 61640.417380256324,
  },
  Object {
    "date": 2020-04-29T08:59:59.999Z,
    "value": 61731.25354018286,
  },
  Object {
    "date": 2020-04-29T09:59:59.999Z,
    "value": 61822.69683640762,
  },
  Object {
    "date": 2020-04-29T10:59:59.999Z,
    "value": 62713.17649470862,
  },
  Object {
    "date": 2020-04-29T11:59:59.999Z,
    "value": 66850.9893755308,
  },
  Object {
    "date": 2020-04-29T12:59:59.999Z,
    "value": 67216.98369123023,
  },
  Object {
    "date": 2020-04-29T13:59:59.999Z,
    "value": 68247.71389875683,
  },
  Object {
    "date": 2020-04-29T14:59:59.999Z,
    "value": 68185.2378870933,
  },
  Object {
    "date": 2020-04-29T15:59:59.999Z,
    "value": 68404.7917467561,
  },
  Object {
    "date": 2020-04-29T16:59:59.999Z,
    "value": 70206.2875628975,
  },
  Object {
    "date": 2020-04-29T17:59:59.999Z,
    "value": 136198.5259407142,
  },
  Object {
    "date": 2020-04-29T18:59:59.999Z,
    "value": 134400.85040331958,
  },
  Object {
    "date": 2020-04-29T19:59:59.999Z,
    "value": 90317.4326797223,
  },
  Object {
    "date": 2020-04-29T20:59:59.999Z,
    "value": 91382.49897180383,
  },
  Object {
    "date": 2020-04-29T21:59:59.999Z,
    "value": 91660.73080065567,
  },
  Object {
    "date": 2020-04-29T22:59:59.999Z,
    "value": 93649.35193856756,
  },
  Object {
    "date": 2020-04-29T23:59:59.999Z,
    "value": 93590.47244952132,
  },
  Object {
    "date": 2020-04-30T00:59:59.999Z,
    "value": 93574.87166365724,
  },
  Object {
    "date": 2020-04-30T01:59:59.999Z,
    "value": 94534.7807396759,
  },
  Object {
    "date": 2020-04-30T02:59:59.999Z,
    "value": 94988.36460525115,
  },
  Object {
    "date": 2020-04-30T03:59:59.999Z,
    "value": 97203.99063274164,
  },
  Object {
    "date": 2020-04-30T04:59:59.999Z,
    "value": 97634.13356338303,
  },
  Object {
    "date": 2020-04-30T05:59:59.999Z,
    "value": 99296.89024101845,
  },
  Object {
    "date": 2020-04-30T06:59:59.999Z,
    "value": 104734.28281145048,
  },
  Object {
    "date": 2020-04-30T07:59:59.999Z,
    "value": 102346.09148709482,
  },
  Object {
    "date": 2020-04-30T08:59:59.999Z,
    "value": 102382.9338767522,
  },
  Object {
    "date": 2020-04-30T09:59:59.999Z,
    "value": 106579.88145876832,
  },
  Object {
    "date": 2020-04-30T10:59:59.999Z,
    "value": 104791.17616384765,
  },
  Object {
    "date": 2020-04-30T11:59:59.999Z,
    "value": 106820.8866505071,
  },
  Object {
    "date": 2020-04-30T12:59:59.999Z,
    "value": 105708.42808511939,
  },
  Object {
    "date": 2020-04-30T13:59:59.999Z,
    "value": 105645.4962740656,
  },
  Object {
    "date": 2020-04-30T14:59:59.999Z,
    "value": 106078.48463357189,
  },
  Object {
    "date": 2020-04-30T15:59:59.999Z,
    "value": 93988.12835185972,
  },
  Object {
    "date": 2020-04-30T16:59:59.999Z,
    "value": 92869.53298537577,
  },
  Object {
    "date": 2020-04-30T17:59:59.999Z,
    "value": 91070.36455311374,
  },
  Object {
    "date": 2020-04-30T18:59:59.999Z,
    "value": 98948.2730183137,
  },
  Object {
    "date": 2020-04-30T19:59:59.999Z,
    "value": 100518.67628266563,
  },
  Object {
    "date": 2020-04-30T20:59:59.999Z,
    "value": 100575.34431132187,
  },
  Object {
    "date": 2020-04-30T21:59:59.999Z,
    "value": 100684.63423174866,
  },
  Object {
    "date": 2020-04-30T22:59:59.999Z,
    "value": 99603.92785300696,
  },
  Object {
    "date": 2020-04-30T23:59:59.999Z,
    "value": 99065.55792994573,
  },
  Object {
    "date": 2020-05-01T00:59:59.999Z,
    "value": 142070.51426578747,
  },
  Object {
    "date": 2020-05-01T01:59:59.999Z,
    "value": 142507.17807288267,
  },
  Object {
    "date": 2020-05-01T02:59:59.999Z,
    "value": 142469.21035306947,
  },
  Object {
    "date": 2020-05-01T03:59:59.999Z,
    "value": 142186.56634577268,
  },
  Object {
    "date": 2020-05-01T04:59:59.999Z,
    "value": 143058.37742957377,
  },
  Object {
    "date": 2020-05-01T05:59:59.999Z,
    "value": 144043.84597557536,
  },
  Object {
    "date": 2020-05-01T06:59:59.999Z,
    "value": 143548.20146255518,
  },
  Object {
    "date": 2020-05-01T07:59:59.999Z,
    "value": 143173.71192925266,
  },
  Object {
    "date": 2020-05-01T08:59:59.999Z,
    "value": 147760.87190810434,
  },
  Object {
    "date": 2020-05-01T09:59:59.999Z,
    "value": 151965.715745026,
  },
  Object {
    "date": 2020-05-01T10:59:59.999Z,
    "value": 152936.52028883522,
  },
  Object {
    "date": 2020-05-01T11:59:59.999Z,
    "value": 154802.32214309074,
  },
  Object {
    "date": 2020-05-01T12:59:59.999Z,
    "value": 153661.31097895125,
  },
  Object {
    "date": 2020-05-01T13:59:59.999Z,
    "value": 152405.01019572187,
  },
  Object {
    "date": 2020-05-01T14:59:59.999Z,
    "value": 151209.8142889088,
  },
  Object {
    "date": 2020-05-01T15:59:59.999Z,
    "value": 151846.21109282936,
  },
  Object {
    "date": 2020-05-01T16:59:59.999Z,
    "value": 150318.77547821897,
  },
  Object {
    "date": 2020-05-01T17:59:59.999Z,
    "value": 87748.16154230622,
  },
  Object {
    "date": 2020-05-01T18:59:59.999Z,
    "value": 87982.33167296604,
  },
  Object {
    "date": 2020-05-01T19:59:59.999Z,
    "value": 87763.5866399208,
  },
  Object {
    "date": 2020-05-01T20:59:59.999Z,
    "value": 87545.64944410611,
  },
  Object {
    "date": 2020-05-01T21:59:59.999Z,
    "value": 88318.76840136599,
  },
  Object {
    "date": 2020-05-01T22:59:59.999Z,
    "value": 53713.9230964081,
  },
  Object {
    "date": 2020-05-01T23:59:59.999Z,
    "value": 53835.27448811806,
  },
  Object {
    "date": 2020-05-02T00:59:59.999Z,
    "value": 53531.184753326364,
  },
  Object {
    "date": 2020-05-02T01:59:59.999Z,
    "value": 53540.00439872327,
  },
  Object {
    "date": 2020-05-02T02:59:59.999Z,
    "value": 53504.964505835735,
  },
  Object {
    "date": 2020-05-02T03:59:59.999Z,
    "value": 53705.236263541236,
  },
  Object {
    "date": 2020-05-02T04:59:59.999Z,
    "value": 53652.68600940711,
  },
  Object {
    "date": 2020-05-02T05:59:59.999Z,
    "value": 53568.8713747536,
  },
  Object {
    "date": 2020-05-02T06:59:59.999Z,
    "value": 53722.6483415262,
  },
  Object {
    "date": 2020-05-02T07:59:59.999Z,
    "value": 53555.58930533219,
  },
  Object {
    "date": 2020-05-02T08:59:59.999Z,
    "value": 53460.06924455731,
  },
  Object {
    "date": 2020-05-02T09:59:59.999Z,
    "value": 53535.80710625345,
  },
  Object {
    "date": 2020-05-02T10:59:59.999Z,
    "value": 53698.19302922189,
  },
  Object {
    "date": 2020-05-02T11:59:59.999Z,
    "value": 53925.65231021187,
  },
  Object {
    "date": 2020-05-02T12:04:06.099Z,
    "value": 54102.080296362576,
  },
]
`;
